# pyopennetzteil

./: .build.yml  Makefile  opennetzteil.py  pyproject.toml  setup.cfg
.github/workflows/: linters.yml
tests/: test_params.py
