[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "pyopennetzteil"
version = "0.1.2"
description = "A python client for the opennetzteil specification"
authors = ["Stefan Tatschner <stefan@rumpelsepp.org>"]
license = "MIT"
homepage = "https://github.com/rumpelsepp/pyopennetzteil"
packages = [
    { include = "opennetzteil" },
]

[tool.poetry.dependencies]
python = "^3.9"
aiohttp = "^3.8.1"

[tool.poetry.dev-dependencies]
mccabe = "^0.6.1"
rope = "^1.0.0"
mypy = "^0.941"
flake8 = "^4.0.1"
python-lsp-black = "^1.2.1"
python-lsp-server = "^1.4.0"
pylsp-mypy = "^0.5.8"
pylsp-rope = "^0.1.9"
black = "^22.1.0"
pytest = "^7.1.2"
pytest-asyncio = "^0.18.0"

[tool.mypy]
strict = true

[tool.black]
target-version = ['py39']

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.pylint.messages_control]
disable = [
    "invalid-name",
    "missing-class-docstring",
    "missing-class-docstring",
    "missing-function-docstring",
    "missing-module-docstring",
]
